# context-management-for-antigravity

./: .gitignore  ANTIGRAVITY.md  LICENSE  README.md  SKILL.md  package.json
.antigravity/: marketplace.json
.plugin/: plugin.json
examples/code-generation-harness/: HOW-SKILLS-BUILT-THIS.md  README.md  agent.py  harness.py  pyproject.toml
examples/code-generation-harness/tests/: test_harness.py
examples/digital-brain-skill/: HOW-SKILLS-BUILT-THIS.md  README.md
examples/llm-as-judge-skills/: HOW-SKILLS-BUILT-THIS.md  README.md  package.json
examples/multi-agent-coordination/: HOW-SKILLS-BUILT-THIS.md  README.md
examples/research-pipeline/: HOW-SKILLS-BUILT-THIS.md  README.md
researcher/: source-registry.md
researcher/benchmarks/: activation-cases.jsonl
researcher/claims/: index.jsonl
researcher/corpus/: index.json
researcher/mechanisms/: registry.jsonl
researcher/rubrics/: skill-quality.md
researcher/scripts/: check_activation_cases.py  run_benchmarks.py  run_router_llm.py  skill_health.py  validate_repo.py
skills/advanced-evaluation/: SKILL.md
skills/bdi-mental-states/: SKILL.md
skills/context-compression/: SKILL.md
skills/context-degradation/: SKILL.md
skills/context-fundamentals/: SKILL.md
skills/context-optimization/: SKILL.md
skills/evaluation/: SKILL.md
skills/filesystem-context/: SKILL.md
skills/harness-engineering/: SKILL.md
skills/hosted-agents/: SKILL.md
skills/latent-briefing/: SKILL.md
skills/memory-systems/: SKILL.md
skills/multi-agent-patterns/: SKILL.md
skills/tool-design/: SKILL.md
template/: SKILL.md
(+22 files in other folders)
