[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code_generation_harness"
version = "1.0.0"
description = "A code-generation harness demonstrating agent loop safety boundaries and novelty gates."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]
